[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "~1.1.3" # sea-orm-migration version
features = [
  # Enable following runtime and db backend features if you want to run migration via CLI
  # "runtime-actix-native-tls",
  # "sqlx-mysql",
  "sqlx-postgres",
  "runtime-tokio-native-tls",
]

[dependencies.sea-orm]
version = "1.1.3"
features = ["macros"]
